--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@ src="personal/at.gif">cs.stonybrook.edu
 	<font size="4" color="#034f84"><b>Quick links</b></font> <font size="3"> 
 		<br>
 		&nbsp; &nbsp; &nbsp;
-		<a href="https://portal.unt.edu/psp/ps/EMPLOYEE/EMPL/h/?tab=SYPA_GUEST" target="_blank"><font color="#0099ff" style="line-height: 150%;">UNT System</font></a> &nbsp;   
+		<a href="https://my.unt.edu/psp/ps/?cmd=login" target="_blank"><font color="#0099ff" style="line-height: 150%;">myUNT</font></a> &nbsp;   
+		<a href="https://it.unt.edu/eagleconnect" target="_blank"><font color="#0099ff" style="line-height: 150%;">EagleConnect</font></a> &nbsp;   
 		<a href="https://computerscience.engineering.unt.edu/" target="_blank"><font color="#0099ff">UNT CSE</font></a>   &nbsp; 
+		<a href="https://www.unt.edu/find-people-departments" target="_blank"><font color="#0099ff">UNT Directory</font></a>   &nbsp; 
+		<a href="https://transportation.unt.edu/sites/default/files/unt_campus_parking.pdf" target="_blank"><font color="#0099ff">UNT Map</font></a>   &nbsp; 
 		<a href="https://www.google.com/" target="_blank"><font color="#0099ff">Google</font></a>     &nbsp; 
 		<a href="https://scholar.google.com/" target="_blank"><font color="#0099ff">gScholar</font></a>   &nbsp; 
 		<a href="http://maps.google.com/" target="_blank"><font color="#0099ff">gMap</font></a>   &nbsp; 
