--- a/publications.html
+++ b/publications.html
@@ -262,7 +262,7 @@
 				<br>
 				<font color="#000000" ><b>Heng Fan</b>, Peng Chu, Longin Jan Latecki, and Haibin Ling</font>
 				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>Oral</b></font>)
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> 
 				<br>
 				<a href="publication\WACV-19-a.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -275,7 +275,7 @@
 				<br>
 				<font color="#000000" >Peng Chu, <b>Heng Fan</b>, Chiu C. Tan, and Haibin Ling</font>
 				<br>
-				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> (<font color="#CC0000"><b>Oral</b></font>)
+				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> 
 				<br>
 				<a href="publication\WACV-19-b.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -314,7 +314,7 @@
 				<br>
 				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Shibao Zheng, Hang Su, Xinzhe Li, Shuang Wu, and Haibin Ling</font>
 				<br>
-				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2018.</font> (<font color="#CC0000"><b>Oral</b></font>)
+				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2018.</font> 
 				<br>
 				<a href="publication\AAAI-18.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://drive.google.com/file/d/1rt7DpXJIvRVCya463gt2jqxl71xy5o7J/view" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
@@ -340,7 +340,7 @@
 				<br>
 				<font color="#000000" ><b>Heng Fan</b> and Jinhai Xiang</font>
 				<br>
-				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2017.</font> (<font color="#CC0000"><b>Oral</b></font>)
+				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2017.</font> 
 				<br>
 				<a href="publication\AAAI-17.pdf" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
@@ -353,7 +353,7 @@
 				<br>
 				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
 				<br>
-				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) Workshop, 2017.</font> (<font color="#CC0000"><b>Oral</b></font>)
+				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) Workshop, 2017.</font> 
 				<br>
 				<a href="publication\CVPRW-17.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://www.dabi.temple.edu/~hbling/code/SANet/SANet.html" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
