--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ src="personal/at.gif">cs.stonybrook.edu
 	<HR>
 	
 	
-	<font size="4" color="#034f84"><b>News</b></font>
+	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
 		<li><font style="font-weight:bold; line-height: 120%">2020-11:</font> Another paper on tracking accepted to <a href="http://wacv2021.thecvf.com/" target="_blank"><font color="#0099ff">WACV 2021</font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2020-11:</font> A paper on attribute editing accepted to Neural Networks.</li>
