--- a/service.html
+++ b/service.html
@@ -141,6 +141,13 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Robotics and Autonomous Systems (<font style="font-weight:bold">RAS</font>)
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				IEEE Signal Processing Letters  (<font style="font-weight:bold">SPL</font>)
 				<br>
 			</p>
