--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
 
 <div class="navi central_body">
     <a class="navi" href="./index.html">Home</a>
-    <a class="navi navi_active" href="./publications.html">Full Publications</a>
+    <a class="navi navi_active" href="./publications.html">Selected Publications</a>
     <a class="navi" href="./teaching.html">Teaching</a>
     <a class="navi" href="./service.html">Professional Activities</a>
 	<!--<a class="navi" href="./student.html">Student Supervision</a>-->
@@ -24,6 +24,11 @@
 
 <div class="central_body">
 	<!-- full journal papers -->
+
+	<font size="3">For full publication list, please go to <a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>.</font>
+	<br>
+	<br>
+	
 	<font size="4" color="#034f84"><b>Journal Papers</b></font>
 	<br>
 	
@@ -68,6 +73,7 @@
 			</p>
 		</li>
 		
+		<!--
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Semantic-Aware Label Placement for Augmented Reality in Street View</font>
@@ -93,6 +99,8 @@
 				<br>
 			</p>
 		</li>
+		
+		-->
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
@@ -133,6 +141,7 @@
 			</p>
 		</li>
 		
+		<!--
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Combining Convolutional and Recurrent Neural Networks for Human Skin Detection</font>
@@ -171,6 +180,7 @@
 				<br>
 			</p>
 		</li>
+		-->
 		
     </ul>
     
@@ -204,6 +214,7 @@
 			</p>
 		</li>
 		
+		<!--
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Detection of Trabecular Landmarks for Osteoporosis Prescreening in Dental Panoramic Radiographs</font>
@@ -216,6 +227,7 @@
 				<br>
 			</p>
 		</li>
+		-->
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
@@ -282,6 +294,7 @@
 			</p>
 		</li>
 		
+		<!--
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Complementary Siamese Networks for Robust Visual Tracking</font>
@@ -307,6 +320,7 @@
 				<br>
 			</p>
 		</li>
+		-->
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
@@ -360,6 +374,7 @@
 			</p>
 		</li>
 		
+		<!--
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Robust Visual Tracking via Deep Discriminative Model</font>
@@ -385,6 +400,7 @@
 				<br>
 			</p>
 		</li>
+		-->
 		
     </ul>
 	<HR>
