--- a/service.html
+++ b/service.html
@@ -14,7 +14,7 @@
 
 <div class="navi central_body">
     <a class="navi" href="./index.html">Home</a>
-    <a class="navi" href="./publications.html">Full Publications</a>
+    <a class="navi" href="./publications.html">Selected Publications</a>
     <a class="navi" href="./teaching.html">Teaching</a>
     <a class="navi navi_active" href="./service.html">Professional Activities</a>
 	<!--<a class="navi" href="./student.html">Student Supervision</a>-->
