--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <div class="intro">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
             <br><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PhD candidate
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4">Assistant Professor</font>
             <br><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.cs.stonybrook.edu/"><font color="#0099ff">Department of Computer Science</font></a>, <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a>, <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room 138, New Computer Science Bldg, Stony Brook, NY 11794
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room XXX, 1155 Union Circle #311366 Denton, Texas 76203
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: hefan<img height="13" width="13"
-src="personal/at.gif">cs.stonybrook.edu    
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: hefan@cs.stonybrook.edu<!-- hefan<img height="13" width="13"
+src="personal/at.gif">cs.stonybrook.edu  -->
 			<br><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/Heng-Fan-cv.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>]
@@ -50,8 +50,8 @@ src="personal/at.gif">cs.stonybrook.edu
 	<HR>
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>I am a PhD student in <a href="https://www.cs.stonybrook.edu/"><font color="#0099ff">Department of Computer Science</font></a>, <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>, 
-	         advised by Prof. <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Haibin Ling</font></font></a>. Prior to this, I was a PhD student at Temple University. I spent two and a half years as a master student (courses completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
+    <p style="margin-top:5px;"><font>I am an incoming Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. I obtained my Ph.D. in the CS department at <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>, 
+	         advised <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff"> SUNY Empire Innovation Professor Haibin Ling</font></font></a>. Prior to this, I was a PhD student at Temple University. I spent two and a half years as a master student (courses completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
     
 	<HR>
 	
@@ -70,7 +70,7 @@ src="personal/at.gif">cs.stonybrook.edu
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2021-05:</font> I passed my PhD dissertation. So much gratitude for everyone I met along this journey.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2021-05:</font> I passed my Ph.D. dissertation. So much gratitude for everyone I met along this journey.</li>
     </ul>
 	
 	<HR>
