--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
     <p style="margin-top:5px;"><font>I am an incoming Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. I obtained my Ph.D. in the CS department at <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>, 
-	         advised <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff"> SUNY Empire Innovation Professor Haibin Ling</font></font></a>. Prior to this, I was a Ph.D. student at Temple University. I spent two and a half years as a master student (courses completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
+	         advised <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff"> SUNY Empire Innovation Professor Haibin Ling</font></font></a>. Prior to this, I was a PhD student at Temple University. I spent two and a half years as a master student (courses completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
     
 	<HR>
 	
@@ -70,7 +70,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2021-05:</font> I passed my Ph.D. dissertation. So much gratitude for everyone I met along this journey.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2021-05:</font> I passed my PhD dissertation. So much gratitude for everyone I met along this journey.</li>
     </ul>
 	
 	<HR>
