--- a/projects/TracKlinic/TracKlinic.htm
+++ b/projects/TracKlinic/TracKlinic.htm
@@ -99,7 +99,7 @@
 	<font size="4"> 
 	Heng Fan, Fan Yang, Peng Chu, Yuewei Lin, Lin Yuan, and Haibin Ling, 
 	"TracKlinic: Diagnosis of Challenge Factors in Visual Tracking," 
-	IEEE  Winter Conference on Applications of Computer Vision (WACV), 2021.
+	IEEE  Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.
 	</font>
 	<br>
 	<font size="4"> 
