--- a/projects/TracKlinic/TracKlinic.htm
+++ b/projects/TracKlinic/TracKlinic.htm
@@ -24,7 +24,7 @@
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> Heng Fan and Haibin Ling</font> <br>
+	<font size="4"> <a href="https://hengfan2010.github.io/"><font><font color="#0099ff">Heng Fan</font></font></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Haibin Ling</font></font></a></font> <br>
 	<font size="4"> Department of Computer Science, Stony Brook University</font>
 	</center>
 	</p>
