--- a/projects/TracKlinic/TracKlinic.htm
+++ b/projects/TracKlinic/TracKlinic.htm
@@ -41,7 +41,7 @@
 	</center>
 	</p>
 	
-	<p style="margin-top:5px;">
+	<p style="margin-top:5px;text-align:justify">
 	<font size="4"> Generic visual object tracking is difficult due to many challenge factors (e.g., occlusion, blur, etc.). Each of these 
 	factors may cause serious problems for a tracker, and when they work together can make things even more complicated. Despite a great 
 	amount of efforts devoted to understanding the behavior of trackers, reliable and quantifiable ways for studying the per factor 
