--- a/projects/TOTB/index.htm
+++ b/projects/TOTB/index.htm
@@ -174,7 +174,7 @@ div img:hover{
 	</a>
 	<br>
 	<font size="4"> <a href="https://arxiv.org/abs/2011.10875" target="https://arxiv.org/abs/2011.10875"><font color="#0099ff">Paper</font></a>  &nbsp; &nbsp;
-	<font size="4"> <a href="https://drive.google.com/file/d/1eIbg5wpBoJbGHgv3g-ucW45g-wfQf_Y6/view?usp=sharing" target="https://drive.google.com/file/d/1eIbg5wpBoJbGHgv3g-ucW45g-wfQf_Y6/view?usp=sharing"><font color="#0099ff">Dataset (google drive)</font></a>  &nbsp; &nbsp;
+	<font size="4"> <a href="https://drive.google.com/file/d/1eIbg5wpBoJbGHgv3g-ucW45g-wfQf_Y6/view?usp=sharing" target="https://drive.google.com/file/d/1eIbg5wpBoJbGHgv3g-ucW45g-wfQf_Y6/view?usp=sharing"><font color="#0099ff">Dataset (google drive~7.8G)</font></a>  &nbsp; &nbsp;
 	<!--
 	<font size="4"> <font color="#0099ff">Dataset [<a href="https://drive.google.com/file/d/1eIbg5wpBoJbGHgv3g-ucW45g-wfQf_Y6/view?usp=sharing" target="https://arxiv.org/abs/2011.10875"><font color="#0099ff">Google drive</font></a> | Baidu Pan - <a href="https://pan.baidu.com/s/1PsZoZWKioonKkalkiUdt-g" target="#"><font color="#0099ff">part1</font></a> (pwd: TOTB), <a href="https://pan.baidu.com/s/18LUv5k57v6-GVyvdzRHqpg" target="#"><font color="#0099ff">part2</font></a> (pwd: TOTB)]</font>  &nbsp; &nbsp;&nbsp;
 	<br>
