--- a/publications.html
+++ b/publications.html
@@ -209,7 +209,7 @@
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
 				<br>
-				<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Fan_MART_Motion-Aware_Recurrent_Neural_Network_for_Robust_Visual_Tracking_WACV_2021_paper.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
+				<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Fan_MART_Motion-Aware_Recurrent_Neural_Network_for_Robust_Visual_Tracking_WACV_2021_paper.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project</font></a>
 				<br>
 			</p>
 		</li>
