--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <br><br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a>, <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room FF284, Discovery Park, 3940 N Elm St, Denton, TX 76207
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room F284, Discovery Park, 3940 N Elm St, Denton, TX 76207
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: hefan@cs.stonybrook.edu<!-- hefan<img height="13" width="13"
 src="personal/at.gif">cs.stonybrook.edu  -->
