--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> I serve as an Area Chair for <a href="http://wacv2022.thecvf.com/home"><font><font color="#0099ff"> WACV 2022</font></font></a>.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> I will serve as an Area Chair for <a href="http://wacv2022.thecvf.com/home"><font><font color="#0099ff"> WACV 2022</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> A paper on visual object tracking accepted to <a href="https://www.iros2021.org/"><font><font color="#0099ff"> IROS 2021</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-05:</font> I passed my PhD dissertation. So much gratitude for everyone I met along this journey.</li>
     </ul>
