--- a/service.html
+++ b/service.html
@@ -25,14 +25,21 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>Conference Organization</b></font>
+	<font size="4" color="#034f84"><b>Conference Organizing Committee</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Co-organizer, International Workshop on Computer Vision for UAVs in ECCV 2020
+				Co-organizer, International Workshop on Computer Vision for UAVs in (<font style="font-weight:bold">ECCV</font>), 2020
 				<br>
 			</p>
 		</li>
@@ -48,7 +55,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>)</font>, <font size="3">2021</font>
+				IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>)</font>, <font size="3">2021, 2022</font>
 				<br>
 			</p>
 		</li>
