--- a/teaching.html
+++ b/teaching.html
@@ -23,6 +23,22 @@
 <div class="navi_bar"></div>
 
 <div class="central_body">
+
+	<font size="4" color="#034f84"><b>Department of Computer Science and Engineering, University of North Texas</b></font>
+	<br>
+	
+	<ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				CSCE 3110, Data Structures and Algorithms, Fall 2021.
+				<br>
+			</p>
+		</li>
+		
+    </ul>
+	
+	<!--
 	
 	<font size="4" color="#034f84"><b>Department of Computer Science, Stony Brook University</b></font>
 	<br>
@@ -74,6 +90,7 @@
 		</li>
 		
     </ul>
+	--!>
 
 </div>
 
