--- a/service.html
+++ b/service.html
@@ -52,6 +52,13 @@
 	<br>
 	
     <ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Neural Information Processing Systems  (<font style="font-weight:bold">NeurIPS</font>)</font> - Datasets and Benchmarks Track, <font size="3">2021</font>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
