--- a/projects/TOTB/index.htm
+++ b/projects/TOTB/index.htm
@@ -51,6 +51,7 @@ div img:hover{
 	</center>
 	</p>
 	
+	
 	<HR>
 	
 	<p style="margin-top:5px;">
@@ -199,12 +200,12 @@ div img:hover{
   	            <td>
   				<left>
 					<code>
-					@article{fan2020transparent, <br>
+					@inproceedings{fan2021transparent, <br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; title={Transparent Object Tracking Benchmark}, <br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; author={Fan, Heng and Miththanthaya, Halady Akhilesha and Harshit and Rajan,  <br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Siranjiv Ramana and Liu, Xiaoqiong and Zou, Zhilin and Lin, Yuewei and Ling, Haibin}, <br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; journal={arXiv preprint arXiv:2011.10875},<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; year={2020}<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Siranjiv Ramana and Liu, Xiaoqiong and Zou, Zhilin and Lin, Yuewei and Ling, Haibin}, <br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},,<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; year={2021}<br>
 					}
 					</code>
 				</left>
@@ -215,7 +216,7 @@ div img:hover{
 	<br>
 
 	<HR>
-	<b>Contact:</b> If you have any questions, please contact Heng Fan at hefan@cs.stonybrook.edu.
+	<b>Contact:</b> If you have any questions, please contact Heng Fan at heng.fan@unt.edu.
 	<HR>
 	
 </div>
