--- a/projects/TOTB/index.htm
+++ b/projects/TOTB/index.htm
@@ -47,6 +47,8 @@ div img:hover{
 	</font> 
 	<br>
 	<br>
+	
+	<font size="4">University of North Texas &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; Stony Brook University &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Brookhaven National Laboratory</font>
 	<!--<font size="4"> Department of Computer Science, Stony Brook University</font>-->
 	</center>
 	</p>
