--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room F284, UNT Discovery Park, 3940 N Elm St, Denton, TX 76207
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: hefan@cs.stonybrook.edu<!-- hefan<img height="13" width="13"
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: heng.fan@unt.edu<!-- hefan<img height="13" width="13"
 src="personal/at.gif">cs.stonybrook.edu  -->
 			<br><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/HengFan_CV_selected.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
@@ -64,7 +64,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	-->
 	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3">I am looking for multiple self-motivated PhD students to work on challenging problems (e.g., <b>visual object tracking</b>, <b>video object detection/segmentation</b>) 
-	in computer vision. Please send me your CV and transcripts if you are interested. Motivated master and undergraduate students within UNT are also welcome.</font>
+	in computer vision. Please send me your CV and transcripts if you are interested. Motivated master and undergraduate students within UNT are also welcome. (<b>NOTE:</b> GRE can be waived for PhD application in Spring or Fall 2022 if your GPA is 3.0 or above.)</font>
 	<HR>
 	
 	
