--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -78,7 +78,20 @@ div img:hover{
 	<HR>
 	
 	<p style="margin-top:5px;">
-	<font size="4"> <b>Recommended textbooks</b></font> <br>
+	<font size="4"> <b>Course description</b></font>
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4">The aim of this course is to provide an introduction to the design and analysis of fundamental data
+	structures and algorithms. The lectures will emphasize the theoretical aspects, while the homework
+	assignments will focus more on the programming and hands-on experience, meant to reinforce the
+	theoretical aspects covered in lectures.</font>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Recommended textbooks</b></font> 
 	</p>
 	
 	<p style="text-align:justify">
@@ -95,29 +108,55 @@ div img:hover{
 	<HR>
 	
 	<p style="margin-top:5px;">
-	<font size="4"> <b>Schedule and class notes (being updated)</b></font> <br>
+	<font size="4"> <b>Schedule and class notes (being updated)</b></font> 
 	</p>
 	
 	<p style="text-align:justify">
 	<table border = "0" cellspacing="5px">
 		<tr>
-			<td width=100 valign=top style='width:80.0pt;background:#58D68D;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Date</b> </font></td>
-			<td width=500 valign=top style='width:480.0pt;background:#58D68D;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Lecture</b> </font></td>
-			<td width=200 valign=top style='width:180.0pt;background:#58D68D;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Note</b> </font></td>
+			<td width=100 valign=top style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Date</b> </font></td>
+			<td width=500 valign=top style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Lecture</b> </font></td>
+			<td width=200 valign=top style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Note</b> </font></td>
 		</tr> 
 
 		<tr>
-			<td width=100 valign=top style='width:80.0pt;background:#D6EAF8;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/24 </font></td>
-			<td width=500 valign=top style='width:480.0pt;background:#D6EAF8;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Introduction and course overview </font></td>
-			<td width=200 valign=top style='width:180.0pt;background:#D6EAF8;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=100 valign=top style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/24 </font></td>
+			<td width=500 valign=top style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Introduction and course overview </font></td>
+			<td width=200 valign=top style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
-			<td width=100 valign=top style='width:80.0pt;background:#F5EEF8;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 8/26 </font></td>
-			<td width=500 valign=top style='width:480.0pt;background:#F5EEF8;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> TBD </font></td>
-			<td width=200 valign=top style='width:180.0pt;background:#F5EEF8;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=100 valign=top style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 8/26 </font></td>
+			<td width=500 valign=top style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> TBD </font></td>
+			<td width=200 valign=top style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 	</table>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Grading policy</b></font> 
+	</p>
+	
+	<p style="text-align:justify">
+	<ul>
+		<li>
+			<font size="4"> Quizzes (closed book): 20% </font>
+		</li>
+		<li>
+			<font size="4"> Assignments: 40%</font>
+		</li>
+		<li>
+			<font size="4"> Midterm exam (closed book): 15%</font>
+		</li>
+		<li>
+			<font size="4"> Final exam (closed book) or project: 20%</font>
+		</li>
+		<li>
+			<font size="4"> Attendance: 5%</font>
+		</li>
+	</ul>
 	</p>
 	
 	<HR>
