--- a/teaching.html
+++ b/teaching.html
@@ -31,7 +31,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 3110, Data Structures and Algorithms, Fall 2021.
+				CSCE 3110, Data Structures and Algorithms, Fall 2021 [<a href="https://hengfan2010.github.io/teaching/21F-3110/index.htm" target="_blank"><font color="#0099ff">course website</font></a>].
 				<br>
 			</p>
 		</li>
