--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -56,6 +56,9 @@ div img:hover{
 			<font size="4"> Office: Discovery Park F284 </font>
 		</li>
 		<li>
+			<font size="4"> Phone: TBD </font>
+		</li>
+		<li>
 			<font size="4"> Office hour: Th 3:30 – 5:30 pm or by appointment</font>
 		</li>
 		<br>
@@ -151,10 +154,13 @@ div img:hover{
 			<font size="4"> Midterm exam (closed book): 15%</font>
 		</li>
 		<li>
-			<font size="4"> Final exam (closed book) or project: 20%</font>
+			<font size="4"> Final exam (closed book): 20%</font>
 		</li>
 		<li>
 			<font size="4"> Attendance: 5%</font>
+		</li>
+		<li>
+			<font size="4"> Course project (optional): 10% (Bonus)</font>
 		</li>
 	</ul>
 	</p>
