--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -145,7 +145,7 @@ div img:hover{
 	<p style="text-align:justify">
 	<ul>
 		<li>
-			<font size="4"> Quizzes (closed book): 20% </font>
+			<font size="4"> Quizzes: 20% </font>
 		</li>
 		<li>
 			<font size="4"> Assignments: 40%</font>
