--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -160,7 +160,7 @@ div img:hover{
 			<font size="4"> Attendance: 5%</font>
 		</li>
 		<li>
-			<font size="4"> Course project (optional): 10% (Bonus)</font>
+			<font size="4"> Course project: 10% (Bonus)</font>
 		</li>
 	</ul>
 	</p>
