--- a/projects/TOTB/index.htm
+++ b/projects/TOTB/index.htm
@@ -216,7 +216,7 @@ div img:hover{
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; title={Transparent Object Tracking Benchmark}, <br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; author={Fan, Heng and Miththanthaya, Halady Akhilesha and Harshit and Rajan,  <br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Siranjiv Ramana and Liu, Xiaoqiong and Zou, Zhilin and Lin, Yuewei and Ling, Haibin}, <br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},,<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; year={2021}<br>
 					}
 					</code>
