--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -130,7 +130,7 @@ div img:hover{
 		
 		<tr>
 			<td width=100 valign=top style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 8/26 </font></td>
-			<td width=500 valign=top style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> TBD </font></td>
+			<td width=500 valign=top style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I </font></td>
 			<td width=200 valign=top style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 	</table>
