--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -56,7 +56,7 @@ div img:hover{
 			<font size="4"> Office: Discovery Park F284 </font>
 		</li>
 		<li>
-			<font size="4"> Phone: TBD </font>
+			<font size="4"> Phone: 940-333-4968 </font>
 		</li>
 		<li>
 			<font size="4"> Office hour: Th 3:30 – 5:30 pm or by appointment</font>
@@ -73,7 +73,13 @@ div img:hover{
 		</li>
 		<br>
 		<li>
-			<font size="4"> TA: TBD</font>
+			<font size="4"> TA: Shiva Ebrahimi (ShivaEbrahimi@my.unt.edu)</font>
+		</li>
+		<li>
+			<font size="4"> Office: Discovery Park F296</font>
+		</li>
+		<li>
+			<font size="4"> Office hours: Wed/Fri 2:45 - 3: 45 pm or by appointment</font>
 		</li>
 	</ul>
 	</p>
@@ -160,7 +166,7 @@ div img:hover{
 			<font size="4"> Attendance: 5%</font>
 		</li>
 		<li>
-			<font size="4"> Course project: 10% (Bonus)</font>
+			<font size="4"> Course project: 10% (bonus)</font>
 		</li>
 	</ul>
 	</p>
