--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 			[<a href="https://www.researchgate.net/profile/Heng_Fan2" target="https://www.researchgate.net/profile/Heng_Fan2"><font color="#0099ff">ResearchGate</font></a>]
         </div>
     </div>
+	<!--
 	<font size="4" color="red"><b>I will be joining University of North Texas (UNT) as an assistant professor in Fall 2021.</b></font>
+	-->
 	
 	<HR>
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>I am an incoming Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. I obtained my Ph.D. in the CS department at <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>, 
+    <p style="margin-top:5px;"><font>I am an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. I obtained my Ph.D. in the CS department at <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>, 
 	         advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff"> SUNY Empire Innovation Professor Haibin Ling</font></font></a>. Prior to this, I was a PhD student at Temple University. I spent two and a half years as a master student (courses completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
     
 	<HR>
