--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -59,7 +59,10 @@ div img:hover{
 			<font size="4"> Phone: 940-565-3209 </font>
 		</li>
 		<li>
-			<font size="4"> Office hour: Th 3:30 – 5:30 pm or by appointment</font>
+			<font size="4"> Office hours: Th 3:30 – 5:30 pm or by appointment</font>
+		</li>
+		<li>
+			<font size="4"> Zoom: https://unt.zoom.us/j/7715604421</font>
 		</li>
 		<br>
 		<li>
