--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -145,7 +145,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 8/31 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Algorithm Analysis I (cont.) </font>
+				Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 3-Algorithm Analysis I-2.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
