--- a/publications.html
+++ b/publications.html
@@ -196,7 +196,7 @@
 				<br>
 				<font>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021.</font>
 				<br>
-				<a href="#" target="_blank"><font color="#0099ff">paper (coming soon)</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
+				<a href="https://arxiv.org/abs/2011.10875" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/TOTB/" target="_blank"><font color="#0099ff">code and project</font></a>
 				<br>
 			</p>
 		</li>
@@ -209,7 +209,7 @@
 				<br>
 				<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2021.</font>
 				<br>
-				<a href="#" target="_blank"><font color="#0099ff">paper (coming soon)</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
+				<a href="https://arxiv.org/abs/2011.12483" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project</font></a>
 				<br>
 			</p>
 		</li>
