--- a/publications.html
+++ b/publications.html
@@ -220,7 +220,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">TracKlinic: Diagnosis of Challenge Factors in Visual Tracking</font>
 				<br>
-				<font color="#000000"><b>Heng Fan</b>, Fan Yang, Peng Chu, Yuewei Lin, Lin Yuan and Haibin Ling</font>
+				<font color="#000000"><b>Heng Fan</b>, Fan Yang, Peng Chu, Yuewei Lin, Lin Yuan, and Haibin Ling</font>
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
 				<br>
