--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -169,6 +169,14 @@ div img:hover{
 			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Recurrence Relations [<a href="slides\3110-lecture 5-Recurrence Relations.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 4</b> <br> 9/13 </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Recurrence Relations (cont.) [<a href="slides\3110-lecture 5-Recurrence Relations.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1, due at 9/21/2021 </font></td>
+		</tr>
 	</table>
 	</p>
 	
