--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -177,6 +177,20 @@ div img:hover{
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1, due at 9/21/2021 </font></td>
 		</tr>
+		
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/16 </font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Abstract Data Type [<a href="slides\3110-lecture 6-Abstract Data Type.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 5</b> <br> 9/21 </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Abstract Data Type (cont.) [<a href="slides\3110-lecture 6-Abstract Data Type.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  -</font></td>
+		</tr>
 	</table>
 	</p>
 	
