--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -208,8 +208,16 @@ div img:hover{
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/30 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Splay Tree [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree (cont.) [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 2 </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 10/5 </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Splay Tree [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
 		</tr>
 	</table>
 	</p>
