--- a/projects/MJDL/MJDL.htm
+++ b/projects/MJDL/MJDL.htm
@@ -1,7 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0050)http://hengfan.byethost7.com/project/MJDL/MJDL.htm -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Robust Visual Tracking with Multitask Joint Dictionary Learning</title></head>
+<title>Robust Visual Tracking with Multitask Joint Dictionary Learning</title>
+<link rel="shortcut icon" href="../../personal/favicon.ico" />
+</head>
 
 <body class="page page-id-544 page-template page-template-page-templates page-template-template-full-width page-template-page-templatestemplate-full-width-php expound-full-width">
 <div style="width: 1000px; margin-left:auto; margin-right:auto">
