--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	-->
 	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3">I am looking for multiple self-motivated PhD students to work on challenging problems (e.g., <b>visual object tracking</b>, <b>video object detection/segmentation</b>) 
-	in computer vision. Please send me your CV and transcripts if you are interested. Motivated master and undergraduate students within UNT are also welcome. (<b>NOTE:</b> GRE can be waived for PhD application in Spring or Fall 2022 if your GPA is 3.0 or above.)</font>
+	in computer vision. Please send me your CV and transcripts if you are interested. Motivated master and undergraduate students within UNT are also welcome.</font>
 	<HR>
 	
 	
