--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -29,7 +29,7 @@ div img:hover{
 
 <div class="central_body">
 	
-	<br>
+	
 	
     <font size="5"><center><b>CSCE 3110 - Data Structures and Algorithms</b></center></font>
 
@@ -219,6 +219,12 @@ div img:hover{
 				Splay Tree [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
+		</tr>
+		
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/7 </font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Splay Tree (cont.) [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 	</table>
 	</p>
