--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,20 @@
 	<br>
 	
     <ul style="margin-top:5px;">
-	
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Detection and Tracking Meet Drones Challenge</font>
+				<br>
+				<font color="#000000" >Pengfei Zhu*, Longyin Wen*, Dawei Du*, Xiao Bian, <b>Heng Fan</b>, Qinghua Hu, and Haibin Ling</font>
+				<br>
+				<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2021, in press.</font>
+				<br>
+				<a href="https://arxiv.org/abs/2001.06303" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/VisDrone/VisDrone-Dataset" target="_blank"><font color="#0099ff">code and benchmark</font></a>
+				<br>
+			</p>
+		</li>
+		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</font>
