--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
 				<br>
 				<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2021, in press.</font>
 				<br>
-				<a href="https://arxiv.org/abs/2001.06303" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/VisDrone/VisDrone-Dataset" target="_blank"><font color="#0099ff">code and benchmark</font></a>
+				<a href="https://arxiv.org/abs/2001.06303" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/VisDrone/VisDrone-Dataset" target="_blank"><font color="#0099ff">code and project</font></a>
 				<br>
 			</p>
 		</li>
