--- a/service.html
+++ b/service.html
@@ -77,7 +77,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				AAAI Conference on Artificial Intelligence (<font style="font-weight:bold">AAAI</font>)</font>, <font size="3">2020, 2021</font>
+				AAAI Conference on Artificial Intelligence (<font style="font-weight:bold">AAAI</font>)</font>, <font size="3">2020, 2021, 2022</font>
 				<br>
 			</p>
 		</li>
@@ -98,7 +98,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				IEEE Conference on Computer Vision and Pattern Recognition (<font style="font-weight:bold">CVPR</font>)</font>, <font size="3">2019 (<font style="font-weight:bold" color="#034f84">Outstanding Reviewer</font>), 2020, 2021</font>
+				IEEE Conference on Computer Vision and Pattern Recognition (<font style="font-weight:bold">CVPR</font>)</font>, <font size="3">2019 (<font style="font-weight:bold" color="#034f84">Outstanding Reviewer</font>), 2020, 2021, 2022</font>
 				<br>
 			</p>
 		</li>
