--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Detection and Tracking Meet Drones Challenge</font>
 				<br>
-				<font color="#000000" >Pengfei Zhu*, Longyin Wen*, Dawei Du*, Xiao Bian, <b>Heng Fan</b>, Qinghua Hu, and Haibin Ling</font>
+				<font color="#000000" >Pengfei Zhu, Longyin Wen, Dawei Du, Xiao Bian, <b>Heng Fan</b>, Qinghua Hu, and Haibin Ling</font>
 				<br>
 				<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2021, in press.</font>
 				<br>
@@ -52,7 +52,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b>*, Hexin Bai*, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
+				<font color="#000000" ><b>Heng Fan</b>, Hexin Bai, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
 				<br>
 				<font>International Journal of Computer Vision (<b>IJCV</b>), 129: 439–461, 2021.</font>
 				<br>
@@ -208,7 +208,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Transparent Object Tracking Benchmark</font>
 				<br>
-				<font color="#000000"><b>Heng Fan</b>, Halady Akhilesha Miththanthaya*, Harshit*, Siranjiv Ramana Rajan*, Xiaoqiong Liu, Zhilin Zou, Yuewei Lin, and Haibin Ling</font>
+				<font color="#000000"><b>Heng Fan</b>, Halady Akhilesha Miththanthaya, Harshit, Siranjiv Ramana Rajan, Xiaoqiong Liu, Zhilin Zou, Yuewei Lin, and Haibin Ling</font>
 				<br>
 				<font>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021.</font>
 				<br>
@@ -302,7 +302,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">LaSOT: A High-quality Benchmark for Large-scale Single Object Tracking</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b>*, Liting Lin*, Fan Yang*, Peng Chu*, Ge Deng, Sijia Yu, Hexin Bai, Yong Xu, Chunyuan Liao, and Haibin Ling</font>
+				<font color="#000000" ><b>Heng Fan</b>, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Hexin Bai, Yong Xu, Chunyuan Liao, and Haibin Ling</font>
 				<br>
 				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019.</font>
 				<br>
