--- a/service.html
+++ b/service.html
@@ -130,7 +130,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Journal of Visual Communication and Image Representation (<font style="font-weight:bold">JVCI</font>)
+				Journal of Visual Communication and Image Representation (<font style="font-weight:bold">JVCIR</font>)
 				<br>
 			</p>
 		</li>
