--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -297,6 +297,9 @@ div img:hover{
 		<li>
 			<font size="4"> Attendance: 5%</font>
 		</li>
+		<li>
+			<font size="4"> Course project (bonus): 10%</font>
+		</li>
 	</ul>
 	</p>
 	
