--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2021-10:</font> We have one paper accepted to PAMI.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2021-11:</font> We have one paper on image generation accepted to Pattern Recognition.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2021-10:</font> We have one paper on UAV tracking and detection accepted to PAMI.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-08:</font> TOTB has been released, go check it out <a href="https://hengfan2010.github.io/projects/TOTB/"><font><font color="#0099ff"> here</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> We have one paper on transparent object tracking accepted to <a href="http://iccv2021.thecvf.com/home"><font><font color="#0099ff"> ICCV 2021</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> I will serve as an Area Chair for <a href="http://wacv2022.thecvf.com/home"><font><font color="#0099ff"> WACV 2022</font></font></a>.</li>
