--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -261,15 +261,30 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10</b> <br> 10/26 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Sorting [<a href="slides\3110-lecture 11-Sorting.pptx" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+				Sorting [<a href="slides\3110-lecture 11-Sorting.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 3, due at 11/2/2021</font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/28 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sorting (cont.) [<a href="slides\3110-lecture 11-Sorting.pptx" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sorting (cont.) [<a href="slides\3110-lecture 11-Sorting.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 3 </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 11</b> <br> 11/2 </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Sorting (cont.) [<a href="slides\3110-lecture 11-Sorting.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/4 </font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Graph I [<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
 		
 	</table>
 	</p>
