--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -282,7 +282,7 @@ div img:hover{
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/4 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Graph I [<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Graph I [<a href="slides\3110-lecture 12-Graph I.ppt" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
