--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -286,6 +286,14 @@ div img:hover{
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 12</b> <br> 11/9 </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Graph I (cont.) [<a href="slides\3110-lecture 12-Graph I.ppt" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
 	</table>
 	</p>
 	
