--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,19 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">GL-GAN: Adaptive Global and Local Bilevel Optimization for Generative Adversarial Network</font>
+				<br>
+				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Xiaohui Yuan, and Jinhai Xiang,</font>
+				<br>
+				<font>Pattern Recognition (<b>PR</b>), 2021, in press.</font>
+				<br>
+				<a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320321005550" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/summar6/GL-GAN" target="_blank"><font color="#0099ff">code</font></a>
+				<br>
+			</p>
+		</li>
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Detection and Tracking Meet Drones Challenge</font>
 				<br>
 				<font color="#000000" >Pengfei Zhu, Longyin Wen, Dawei Du, Xiao Bian, <b>Heng Fan</b>, Qinghua Hu, and Haibin Ling</font>
