--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">GL-GAN: Adaptive Global and Local Bilevel Optimization for Generative Adversarial Network</font>
 				<br>
-				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Xiaohui Yuan, and Jinhai Xiang,</font>
+				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Xiaohui Yuan, and Jinhai Xiang</font>
 				<br>
 				<font>Pattern Recognition (<b>PR</b>), 2021, in press.</font>
 				<br>
